fix search container on mobile

--- a/client/src/features/home/Search.less
+++ b/client/src/features/home/Search.less
@@ -29,5 +29,6 @@
 @media screen and (max-width: 768px) {
 	.search-container {
 		width: auto;
+		flex-flow: row wrap;
 	}
 }
